# dotnet-version-manager

./: .gitignore  Cargo.toml  README.md
.github/workflows/: dvr-release.yml
src/: main.rs
