[package]
name = "dver"
version = "0.2.0"
edition = "2021"
authors = ["Sergio Triana Escobedo <stescobedo.31@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "CLI tool for managing .NET SDK versions, including installation and version switching."
homepage = "https://github.com/stescobedo92/dotnet-version-manager"
repository = "https://github.com/stescobedo92/dotnet-version-manager"
keywords = ["cli"]
readme = "README.md"
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }

# reqwest per HTTP + JSON
reqwest = { version = "0.11", features = ["json"] }

# JSON
serde = { version = "1.0", features = ["derive"] }   # 👈 AGGIUNGI QUESTA
serde_json = "1.0"

# Tokio runtime async
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
